test/files/invalid/struct_indirect_self_reference.fbs
struct Foo {
  x: uint64;
  y: Bar;
}

struct Bar {
  x: uint64;
  y: Foo;
}