test/files/invalid/struct_indirect_self_reference.stderr
error: Structs are not allowed to contain themselves, as it implies infinite size
  ┌─ test/files/invalid/struct_indirect_self_reference.fbs:1:1
  │
1 │ struct Foo {
  │ ---------- Foo contains itself through Bar

error: Structs are not allowed to contain themselves, as it implies infinite size
  ┌─ test/files/invalid/struct_indirect_self_reference.fbs:6:1
  │
6 │ struct Bar {
  │ ---------- Bar contains itself through Foo

Error: Bailing because of errors
